django-app/static/css/signin.css
html,body {
    font-weight: 500;
    min-height: 100vh;
}

#site-main-page {
    margin-top: 0 !important;
    padding: 0 !important;
    display: flex;
    align-items: center;
}

#background-column {
    width: 100vw;
    min-height: 100vh;
    height: inherit;
    background: white;
    background-size: cover;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
    -webkit-text-fill-color: #525252;
}

